# astro-math

./: .gitignore  .tarpaulin.toml  Cargo.toml  README.md
.github/workflows/: release.yml  test.yml
astro-math/: Cargo.toml  README.md
astro-math-py/: .gitignore  .readthedocs.yaml  Cargo.toml  README.md  pyproject.toml  run_tests.sh
astro-math-py/docs/: Makefile  api_guide.rst  conf.py  examples.rst  index.rst  installation.rst  quickstart.rst  requirements.txt  troubleshooting.rst
astro-math-py/docs/api/astro_math/: index.rst
astro-math-py/python/astro_math/: __init__.py
astro-math-py/src/: aberration.rs  airmass.rs  galactic.rs  lib.rs  location.rs  nutation.rs  precession.rs  proper_motion.rs  refraction.rs  sidereal.rs  sun_moon.rs  time.rs  time_scales.rs  transforms.rs
astro-math-py/tests/: test_bindings.py
astro-math/benches/: performance_analysis.rs  simple_performance.rs
astro-math/examples/: aberration.rs  airmass.rs  alt-az-prompt.rs  coordinate_parsing.rs  galactic.rs  moon.rs  nutation.rs  nutation_debug.rs  parallax.rs  precession.rs  proper_motion.rs  rise_set.rs  vega.rs
astro-math/src/: aberration.rs  airmass.rs  erfa.rs  error.rs  galactic.rs  lib.rs  location.rs  location_optimized.rs  moon.rs  nutation.rs  precession.rs  projection.rs  proper_motion.rs  refraction.rs  rise_set.rs  sidereal.rs  sun.rs  time.rs  time_scales.rs  transforms.rs
astro-math/src/tests/: aberration.rs  airmass.rs  erfa.rs  error_paths.rs  galactic.rs  location.rs  mod.rs  moon.rs  nutation.rs  parallax.rs  parsing.rs  precession.rs  proper_motion.rs  refraction.rs  rise_set.rs  sidereal.rs  sun.rs  time.rs  transforms.rs
benchmarks/: benchmark_galactic_coords.ipynb  benchmark_julian_date.ipynb  benchmark_precession_nutation.ipynb  benchmark_proper_motion.ipynb  benchmark_transforms.ipynb
examples/: airmass.rs  alt-az-prompt.rs  galactic.rs  moon.rs  parallax.rs  precession.rs  refraction.rs  rise_set.rs  vega.rs
src/: airmass.rs  error.rs  galactic.rs  lib.rs  location.rs  moon.rs  nutation.rs  parallax.rs  precession.rs  projection.rs  refraction.rs  rise_set.rs  sidereal.rs  time.rs  transforms.rs
src/tests/: airmass.rs  error_paths.rs  galactic.rs  location.rs  mod.rs  moon.rs  parallax.rs  parsing.rs  precession.rs  refraction.rs  rise_set.rs  time.rs  transforms.rs
